# vla-evaluation-harness

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  print_results.py  pyproject.toml  simpler-env-todo.md
.claude/: reported-performance.md  reproduced-performance.md
.github/: PULL_REQUEST_TEMPLATE.md
configs/: README.md  behavior1k_eval.yaml  calvin_eval.yaml  kinetix_eval.yaml  kinetix_realtime.yaml  libero_10.yaml  libero_90.yaml  libero_all.yaml  libero_goal.yaml  libero_mem.yaml  libero_object.yaml  libero_plus_eval.yaml  libero_plus_smoke_test.yaml  libero_smoke_test.yaml  libero_spatial.yaml  maniskill2_eval.yaml  mikasa_eval.yaml  molmospaces_pick_and_place.yaml  rlbench_eval.yaml  robocasa_eval.yaml  robocerebra_eval.yaml  robomme_counting.yaml  robomme_eval.yaml  robomme_imitation.yaml  robomme_permanence.yaml  robomme_reference.yaml  simpler_all_tasks.yaml  simpler_all_tasks_groot.yaml  simpler_google_robot_drawer_va.yaml  simpler_google_robot_move_near_va.yaml  simpler_google_robot_pick_coke_can_va.yaml  simpler_google_robot_put_in_drawer_va.yaml  simpler_google_robot_va_tasks.yaml  simpler_groot_widowx.yaml  simpler_xvla_tasks.yaml  simpler_xvla_widowx.yaml  vlabench_eval.yaml
docker/: Dockerfile.base  Dockerfile.behavior1k  Dockerfile.calvin  Dockerfile.duobench  Dockerfile.kinetix  Dockerfile.libero  Dockerfile.libero_mem  Dockerfile.libero_plus  Dockerfile.libero_pro  Dockerfile.maniskill2  Dockerfile.mikasa_robo  Dockerfile.molmospaces  Dockerfile.rlbench  Dockerfile.robocasa  Dockerfile.robocerebra  Dockerfile.robodojo  Dockerfile.robomme  Dockerfile.robotwin  Dockerfile.simpler  Dockerfile.simpler_groot  Dockerfile.simpler_xvla  Dockerfile.vlabench  README.md  apply_eef_pos_patch.py  build.sh  generate_libero_mem_inits.py  push.sh  rlbench_entrypoint.sh  simpler_eef_pos.patch  xvla_google_robot_patch.py  xvla_sink_camera.py
docs/: architecture.md  design-philosophy.md  tuning-guide.md
experiments/: .gitignore  bench_demand.py  bench_parallel.py  bench_supply.py  (+5 more)
(+562 files in other folders)
